@@ -15,10 +15,10 @@ class HookSuccessMetrics extends UpdatableMetrics {
     }
 
     private static Function<MetricName, String> nameCreator(String prefix) {
-        return metricName -> String.format("%s.%s", prefix, metricName.toString());
+        return metricName -> "%s.%s".formatted(prefix, metricName);
     }
 
     private static String createPrefix(String prefix) {
-        return String.format("%s.success", prefix);
+        return prefix + ".success";
     }
 }
